# gh-Actions-Reader

./: .gitignore  CreatePdf.py  LogExtractor.py  README.md  actions.py  ghActions.py  ghActionsReader.ipynb  main.py  pyproject.toml  pytest.log.parquet  report.ipynb
docs/: LogExtractor.py  actions.py  createPdf.py  main.py
