[project]
name = "gh-actions-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "kaleido==0.2.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.0",
    "pyparsing>=3.2.1",
    "reportlab>=4.3.1",
]
